@@ -1,13 +1,7 @@
 package nio.file;
 
-import java.io.File;
-import java.nio.ByteBuffer;
-import java.nio.IntBuffer;
-import java.nio.MappedByteBuffer;
-import java.nio.channels.FileChannel;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.OpenOption;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
 
@@ -23,6 +17,6 @@ public class FileUtils {
     }
 
     public static void writeFile(String path, String content) throws Exception {
-        Files.write(Path.of(path), content.getBytes(StandardCharsets.UTF_8), StandardOpenOption.WRITE);
+        Files.writeString(Path.of(path), content, StandardOpenOption.WRITE);
     }
 }
